redesigning app phase 1: fixing alarm elements

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "android.support.svg_top_round.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -24,6 +24,6 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:design:26.1.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'com.android.support.svg_top_round:runner:1.0.2'
+    androidTestImplementation 'com.android.support.svg_top_round.espresso:espresso-core:3.0.2'
 }
