--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".AlarmCreationActivity"
+            android:name=".Controllers.AlarmCreationActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -23,12 +23,12 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
-        <activity android:name=".AlarmSettingActivity" />
+        <activity android:name=".Controllers.AlarmSettingActivity" />
 
-        <receiver android:name=".AlarmBroadcastReceiver" />
+        <receiver android:name=".ToolBox.AlarmBroadcastReceiver" />
 
         <service
-            android:name=".RingtoneService"
+            android:name=".ToolBox.RingtoneService"
             android:enabled="true" />
 
     </application>
