--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,12 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
+        vectorDrawables.useSupportLibrary = true
         applicationId "com.jetlightstudio.jetalarm"
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.svg_top_round.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -24,6 +24,4 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:design:26.1.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.svg_top_round:runner:1.0.2'
-    androidTestImplementation 'com.android.support.svg_top_round.espresso:espresso-core:3.0.2'
 }
